// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`prefix > generate tagged attributify 1`] = `
":root{--un-bg-opacity-efwnq4:1;}/* layer: default */
[h-group=""][data-enabled] .group-data-\\[enabled\\]\\:h-bg-green{background-color:rgb(74 222 128 / var(--un-bg-opacity-efwnq4));}
[h-group=""]:hover .group-hover\\:h-bg-red{background-color:rgb(248 113 113 / var(--un-bg-opacity-efwnq4));}"
`;

exports[`prefix > multiple preset prefix 1`] = `
":root{--un-text-opacity-efwnq4:1;}/* layer: default */
.h-container{width:100%;}
.hover\\:h-p4:hover{padding:1rem;}
.h-text-red{color:rgb(248 113 113 / var(--un-text-opacity-efwnq4));}
.bar,
.bar-bar,
.bar-shortcut,
.foo-bar,
.x-shortcut{color:bar;}
.bar-regex,
.foo-regex,
.regex{color:regex;}
@media (min-width: 640px){
.h-container{max-width:640px;}
}
@media (min-width: 768px){
.h-container{max-width:768px;}
}
@media (min-width: 1024px){
.h-container{max-width:1024px;}
}
@media (min-width: 1280px){
.h-container{max-width:1280px;}
}
@media (min-width: 1024px){@media (min-width: 1536px){
.\\32 xl\\:h-container{max-width:1024px;}
}}
@media (min-width: 1280px){@media (min-width: 1536px){
.\\32 xl\\:h-container{max-width:1280px;}
}}
@media (min-width: 1536px){
.\\32 xl\\:h-container{width:100%;}
.h-container{max-width:1536px;}
}
@media (min-width: 1536px){@media (min-width: 1536px){
.\\32 xl\\:h-container{max-width:1536px;}
}}
@media (min-width: 640px){@media (min-width: 1536px){
.\\32 xl\\:h-container{max-width:640px;}
}}
@media (min-width: 768px){@media (min-width: 1536px){
.\\32 xl\\:h-container{max-width:768px;}
}}"
`;

exports[`prefix > preset prefix 1`] = `
":root{--un-space-x-reverse-epw9f3:0;--un-divide-x-reverse-epw9f3:0;--un-bg-opacity-efwnq4:1;--un-text-opacity-efwnq4:1;}/* layer: default */
.h-container{width:100%;}
.dark .dark\\:children\\:hover\\:h-space-x-4:hover>*>:not([hidden])~:not([hidden]){margin-left:calc(1rem * calc(1 - var(--un-space-x-reverse-epw9f3)));margin-right:calc(1rem * var(--un-space-x-reverse-epw9f3));}
.dark .dark\\:hover\\:children\\:h-space-x-4>*:hover>:not([hidden])~:not([hidden]){margin-left:calc(1rem * calc(1 - var(--un-space-x-reverse-epw9f3)));margin-right:calc(1rem * var(--un-space-x-reverse-epw9f3));}
.dark .dark\\:hover\\:children\\:h-divide-x>*:hover>:not([hidden])~:not([hidden]){border-left-width:calc(1px * calc(1 - var(--un-divide-x-reverse-epw9f3)));border-right-width:calc(1px * var(--un-divide-x-reverse-epw9f3));}
.h-group[data-enabled] .group-data-\\[enabled\\]\\:h-bg-green{background-color:rgb(74 222 128 / var(--un-bg-opacity-efwnq4));}
.h-group:hover .group-hover\\:h-bg-red{background-color:rgb(248 113 113 / var(--un-bg-opacity-efwnq4));}
.hover\\:h-p4:hover{padding:1rem;}
.h-text-red{color:rgb(248 113 113 / var(--un-text-opacity-efwnq4));}
.bar-bar,
.bar-shortcut{color:bar;}
@media (min-width: 640px){
.h-container{max-width:640px;}
}
@media (min-width: 768px){
.h-container{max-width:768px;}
}
@media (min-width: 1024px){
.h-container{max-width:1024px;}
}
@media (min-width: 1280px){
.h-container{max-width:1280px;}
}
@media (min-width: 1024px){@media (min-width: 1536px){
.\\32 xl\\:h-container{max-width:1024px;}
}}
@media (min-width: 1280px){@media (min-width: 1536px){
.\\32 xl\\:h-container{max-width:1280px;}
}}
@media (min-width: 1536px){
.\\32 xl\\:h-container{width:100%;}
.h-container{max-width:1536px;}
}
@media (min-width: 1536px){@media (min-width: 1536px){
.\\32 xl\\:h-container{max-width:1536px;}
}}
@media (min-width: 640px){@media (min-width: 1536px){
.\\32 xl\\:h-container{max-width:640px;}
}}
@media (min-width: 768px){@media (min-width: 1536px){
.\\32 xl\\:h-container{max-width:768px;}
}}"
`;

exports[`prefix > uses first truthy prefix 1`] = `
":root{--un-bg-opacity-efwnq4:1;}/* layer: default */
.h-group[data-enabled] .group-data-\\[enabled\\]\\:h-bg-green{background-color:rgb(74 222 128 / var(--un-bg-opacity-efwnq4));}
.h-group:hover .group-hover\\:h-bg-red{background-color:rgb(248 113 113 / var(--un-bg-opacity-efwnq4));}"
`;
